# MAMAN15_Security_Analysis

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  all_milestones.patch  homework_assignment.txt  homework_assignment_15.docx  project_requirements.md  setup_github_repo.ps1  vcpkg.json
%SystemDrive%/ProgramData/Microsoft/Windows/Caches/: cversions.2.db  {2AF94BFE-EC6C-4F57-AF37-AF3185B0A3F4}.2.ver0x0000000000000001.db  {6AF0698E-D558-4F6E-9B3C-3716689AF493}.2.ver0x0000000000000001.db  {DDF571F2-BE98-426D-8288-1A9A39C3FDA2}.2.ver0x0000000000000001.db
src/client/: main.cpp
src/server/: server.py
